src/objects/OCE_Subscription_Fee_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Id__c</fullName>
        <label>Agreement Id</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>SubscriptionFeeSummarys</relationshipLabel>
        <relationshipName>OCESubscriptionFeeSummarys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>OCESubscriptionFeeSummarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <label>Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CPQ-Del-Subscription Fee Summary</label>
    <nameField>
        <label>Subscription Fee Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubscriptionFeeSummarys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>